# algobattle-problems

./: .flake8  .gitignore  README.md  pyproject.toml
.github/workflows/: code_checks.yml  python-app.yml  release.yml
algobattle_problems/biclique/: __init__.py  algobattle.toml  description.md  problem.py  tests.py
algobattle_problems/biclique/generator/: main.py
algobattle_problems/biclique/solver/: main.py
algobattle_problems/c4subgraphiso/: README.md  __init__.py  algobattle.toml  problem.py  tests.py
algobattle_problems/c4subgraphiso/generator/: main.py
algobattle_problems/c4subgraphiso/solver/: main.py
algobattle_problems/circlecover/: algobattle.toml  description.md  problem.py
algobattle_problems/circlecover/generator/: main.py
algobattle_problems/circlecover/solver/: main.py
algobattle_problems/clusterediting/: README.md  __init__.py  algobattle.toml  problem.py  tests.py
algobattle_problems/clusterediting/generator/: main.py
algobattle_problems/clusterediting/solver/: main.py
algobattle_problems/domset/: README.md  __init__.py  algobattle.toml  description.md  problem.py  tests.py
algobattle_problems/domset/generator/: main.py
algobattle_problems/domset/solver/: Dockerfile  main.py
algobattle_problems/hikers/: README.md  algobattle.toml  description.md  problem.py  tests.py
algobattle_problems/hikers/generator/: main.py
algobattle_problems/hikers/solver/: main.py
algobattle_problems/longestpathboundedfvs/: __init__.py  algobattle.toml  problem.py
algobattle_problems/longestpathboundedfvs/generator/: main.py
algobattle_problems/longestpathboundedfvs/solver/: main.py
algobattle_problems/oscm3/: README.md  algobattle.toml  problem.py  tests.py
algobattle_problems/oscm3/generator/: Dockerfile  main.py
algobattle_problems/oscm3/solver/: main.py
algobattle_problems/pairsum/: README.md  algobattle.toml  description.md  problem.py  tests.py
algobattle_problems/pairsum/generator/: main.py
algobattle_problems/pairsum/generator_random/: main.py  main.sh
algobattle_problems/pairsum/solver/: main.py
algobattle_problems/pairsum/solver_random/: main.py
algobattle_problems/pathpacking/: README.md  algobattle.toml  problem.py  tests.py
algobattle_problems/pathpacking/generator/: main.py
algobattle_problems/pathpacking/solver/: main.py
algobattle_problems/scheduling/: README.md  algobattle.toml  description.md  problem.py  tests.py
algobattle_problems/scheduling/generator/: main.py
algobattle_problems/scheduling/solver/: main.py
algobattle_problems/tsptimewindows/: __init__.py  algobattle.toml  description.md  problem.py  tests.py
problems/: README.md  common.py
problems/biclique/: parser.py  problem.py  verifier.py
problems/biclique/generator/: main.py
problems/c4subgraphiso/: README.md  parser.py  problem.py  verifier.py
problems/clusterediting/: parser.py  problem.py  verifier.py
problems/domset/: parser.py  problem.py  verifier.py
problems/hikers/: parser.py  problem.py  verifier.py
problems/longestpathboundedfvs/: problem.py
problems/oscm3/: parser.py  problem.py  verifier.py
problems/pairsum/: README.md  parser.py  problem.py  verifier.py
problems/pathpacking/: parser.py  problem.py  verifier.py
problems/scheduling/: README.md  parser.py  problem.py  verifier.py
problems/tsptimewindows/: problem.py
tests/: README.md  test_problem_biclique.py  test_problem_c4subgprahiso.py  test_problem_clusterediting.py  test_problem_domset.py  test_problem_hikers.py  test_problem_oscm3.py  test_problem_pairsum.py  test_problem_pathpacking.py  test_problem_scheduling.py
(+25 files in other folders)
