[project]
name = "algobattle-problems"
version = "1.0.0"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "Imogen Hergeth"}, {name = "Jan Dreier"}, {name = "Henri Lotze"}]
dependencies = [
    "algobattle",
    "networkx",
]

[project.entry-points."algobattle.problem"]
Biclique = "algobattle_problems.biclique.problem:Biclique"
C4subgraphiso = "algobattle_problems.c4subgraphiso.problem:C4subgraphiso"
Clusterediting = "algobattle_problems.clusterediting.problem:Clusterediting"
Domset = "algobattle_problems.domset.problem:Domset"
Hikers = "algobattle_problems.hikers.problem:Hikers"
LPBFVS = "algobattle_problems.longestpathboundedfvs.problem:Longestpathboundedfvs"
OSCM3 = "algobattle_problems.longestpathboundedfvs.problem:OSCM3"
Pairsum = "algobattle_problems.pairsum.problem:Pairsum"
Pathpacking = "algobattle_problems.pathpacking.problem:Pathpacking"
Scheduling = "algobattle_problems.scheduling.problem:Scheduling"

[tool.setuptools.package-data]
algobattle_problems = ["*/generator/**/*", "*/solver/**/*"]

[tool.pyright]
diagnosticMode = "workspace"

[tool.black]
line-length = 120
